report: Add more things to the bibliography

--- a/report/report.tex
+++ b/report/report.tex
@@ -461,5 +461,9 @@
     Sprite-urile de pe pagina \pageref{sec:sprites} sunt realizate folosind tile-urile publicate
     pe următoare pagină web: \url{https://opengameart.org/content/dungeon-crawl-32x32-tiles}.
 
+    Pentru o listă exhaustivă care indică autorii tuturor sprite-urilor din joc, vă rog urmați
+    acest link: \url{https://github.com/RealKC/WizardGame2/blob/master/res/textures/README.md}.
+
+    Muzica jocului este realizată de minunatul meu coleg Adi, căruia îi mulțumesc.
 
 \end{document}
