report: Add section about singletons

--- a/report/report.tex
+++ b/report/report.tex
@@ -397,6 +397,16 @@
     Pentru a asigura o arhitectură extensibilă am folosit diferite șabloane de proiectare.
 
     \subsubsection{Singleton}
+    \begin{figure}[H]
+        \includegraphics[width=\textwidth]{singletons-diagram}
+        \centering
+        \caption{Două exemple de Singleton din joc}
+    \end{figure}
+
+    Singleton este cel mai utilizat șablon de proiectare din proiect, datorită flexibilității
+    oferite de acesta, enumăr următoarele clase care folosesc acest șablon: \texttt{Game},
+    \texttt{LevelScene}, \texttt{OSTManager}, \texttt{Assets} și \texttt{DatabaseManager}.
+
     \subsubsection{Builder}
     \subsubsection{Factory}
     \subsubsection{Observer}
