report: Write the section about Builder pattern usage

--- a/report/report.tex
+++ b/report/report.tex
@@ -408,6 +408,14 @@
     \texttt{LevelScene}, \texttt{OSTManager}, \texttt{Assets} și \texttt{DatabaseManager}.
 
     \subsubsection{Builder}
+    \begin{figure}[H]
+        \includegraphics[width=\textwidth]{builder-diagram}
+        \centering
+        \caption{Diagrama care prezintă utilizarea șablonului \emph{Builder} în joc}
+    \end{figure}
+
+    Datorită complexității creării instanțelor \texttt{Enemy}, am folosit șablonul \emph{Builder}
+    pentru a encapsula acest proces și pentru a expune o interfață ușor de folosit.
     \subsubsection{Factory}
     \subsubsection{Observer}
     \subsubsection{State}
