report: Update some diagrams + add package diagram

--- a/report/report.tex
+++ b/report/report.tex
@@ -302,6 +302,12 @@
         \emph{main loop} realizează interactivitatea cu jucătorul.
     \end{itemize}
 
+    \begin{figure}[H]
+        \includegraphics[width=\linewidth]{package-diagram}
+        \centering
+        \caption{Diagrama de pachete a jocului}
+    \end{figure}
+
     \subsection{Pachetul \texttt{GameObjects}}
     \begin{figure}[H]
         \includegraphics[width=\linewidth]{gameobjects-diagram}
