report: Add screenshot gallery

--- a/report/report.tex
+++ b/report/report.tex
@@ -517,6 +517,74 @@
 
     \section{Galerie}
 
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{main-menu}
+            \caption{Meniul principal}
+            \label{fig:first}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{level-select}
+            \caption{Meniul pentru alegerea nivelului}
+            \label{fig:second}
+        \end{subfigure}
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{character-select}
+            \caption{Meniul pentru alegerea personajului}
+            \label{fig:third}
+        \end{subfigure}
+
+        \caption{Cele 3 meniuri accesibile jucătorului înainte să intre într-un nivel}
+    \end{figure}
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{level1-start}
+            \centering
+            \caption{Jucătorul la începutul nivelului 1}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{level2-middle}
+            \centering
+            \caption{Jucătorul luptând împotriva lui Cezar}
+        \end{subfigure}
+
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{level3-end}
+            \centering
+            \caption{Jucătorul luptând împotriva lui Cristian}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{levelup-menu}
+            \centering
+            \caption{Jucătorul selectând un item după ce i-a crescut nivelul}
+        \end{subfigure}
+
+        \caption{Jucătorul în diverse ipostaze ale jocului, folosind personaje diferite}
+    \end{figure}
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{game-over-lost-menu}
+            \centering
+            \caption{Jucătorul a pierdut}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{0.45\textwidth}
+            \includegraphics[width=\textwidth]{game-over-won-menu}
+            \centering
+            \caption{Meniul care apare atunci când jucătorul câștigă}
+        \end{subfigure}
+        \caption{Meniurile care apar la final de nivel}
+    \end{figure}
+
+
     \addcontentsline{toc}{section}{Anexa 1}
     \section*{Anexa 1}
     \label{sec:anexa1}
