report: Add more package documentation

--- a/report/report.tex
+++ b/report/report.tex
@@ -298,6 +298,9 @@
         jucătorului.
         \item Clasele din pachetul \texttt{Scenes} care implementează logica diferitelor scene ale
         jocului (meniuri, nivelul în sine).
+        \item Clasele din pachetul \texttt{Exceptions} care definesc excepțiile specifice jocului.
+        \item Clasele din pachetul \texttt{Graphics} care definesc primitive grafice.
+        \item Pachetul \texttt{GameWindow} care definește clase pentru interacțiunea între joc si AWT.
         \item Clasa \texttt{Game} care aduce toate clasele împreună și folosind șablonul
         \emph{main loop} realizează interactivitatea cu jucătorul.
     \end{itemize}
