report: Fix $\LaTeX$ formatting

--- a/report/report.tex
+++ b/report/report.tex
@@ -16,10 +16,11 @@
 \title{\textbf{WizardGame 2}}
 \author{
     Dumitru Mițca\\
-    Grupa NNNNL}
-    \date{2023}
+    Grupa NNNNL
+}
+\date{2023}
 
-    \begin{document}
+\begin{document}
     \maketitle
 
     \hypersetup{linkbordercolor=1 1 1}
