report: Add a note about diagrams

--- a/report/report.tex
+++ b/report/report.tex
@@ -16,7 +16,7 @@
 \title{\textbf{WizardGame 2}}
 \author{
     Dumitru Mițca\\
-    Grupa NNNNL
+    Grupa 1212A
 }
 \date{2023}
 
@@ -363,6 +363,8 @@
         \includegraphics[width=\linewidth]{items-diagram}
         \centering
         \caption{Diagrama UML a item-urilor}
+        \small\textsuperscript{Această diagramă nu conține toate clasele,
+        deoarece o diagramă cu aproximativ 40 de clase ar fi greu de citit}
     \end{figure}
 
     Subclasele clasei \texttt{Item} reprezintă armele, vrăjile și seturile de echipament menționate
